# ga

./: .gitignore  .travis.yml  AUTHORS  AUTOTOOLS_NOTES.md  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  COPYRIGHT.rtf  DISCLAIMER  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES  README  README.md  README_AUTOTOOLS.md  README_RELEASES.md  README_SICM.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  ga.pc.in  ga_vt.c  license.txt  sonar-project.properties  version.sh
LinAlg/lapack+blas/: CMakeLists.txt  GNUmakefile  MakeFile  NTmakefile  README  dblas.f  dgetf2.f  dgetrf.f  dgetrs.f  dlacpy.f  dummy.c  gal_cgemm.f  gal_daxpy.f  gal_dcabs1.f  gal_dcopy.f  gal_ddot.f  gal_dgemm.f  gal_dgemv.f  gal_dger.f  gal_dgetf2.f  gal_dgetrf.f  gal_dgetrs.f  gal_disnan.f  gal_dlacpy.f  gal_dlae2.f  gal_dlaev2.f  gal_dlaisnan.f  gal_dlamch.f  gal_dlanst.f  gal_dlansy.f  gal_dlapy2.f  gal_dlarf.f  gal_dlarfb.f  gal_dlarfg.f  gal_dlarft.f  gal_dlartg.f  gal_dlascl.f  gal_dlaset.f  gal_dlasr.f  gal_dlasrt.f  (+46 more)
armci/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
armci/build-aux/: inside.pl
armci/config/: makecoms.h  makefile.h  makelib.h  makemp.h
armci/doc/: README  README.PVM  README.myrinet  armci.ps
armci/examples/: GNUmakefile  README  examples_config.h  lu-b-bc.c  lu-block.c  lu_nb_get.c  lu_nb_put.c
armci/f90/: GNUmakefile  armci_mov_f90.f90  armcif90.c  testa.f90
armci/gaf2c/: gaf2c.c
armci/m4/: armci_dummy.m4
armci/src/: GNUmakefile  MakeFile  NTmakefile  README  acc.c  acc.h  aggregate.c  alloc.s  armci-vapi.h  armci.c  armci.h  armci_chkpt.c  armci_chkpt.h  armci_portals.h  armci_profile.c  armci_profile.h  armci_storage.c  armci_storage.h  armcip.h  async.c  atomics-i386.h  bgml.c  bgml.h  bufalloc.c  buffers.c  cbuf.c  cbuf.h  clusterinfo.c  collect.c  copy.c  copy.h  dataserv-gm.c  dataserv-myri.c  dataserv-sr8k.c  dataserv.c  deps.h  ds-shared.c  elan.c  elan4.c  elandefs.h  (+95 more)
armci/src-gemini/: Makefile.inc  acc.c  acc.h  armci-onesided.c  armci-onesided.h  armci.c  armci.h  armci_portals.c  armcip.h  buffers.c  caccumulate.c  clusterinfo.c  copy.h  ds-shared.c  fence.c  gpc.c  groups.c  kr_malloc.c  locks.h  memlock.h  memory.c  message.c  message.h  mutex.c  new_memory.c  pendbufs.c  request.c  request.h  rmw.c  semaphores.c  shmem.c  shmlimit.c  signaltrap.c  spinlock.h  strided.c  vector.c
armci/src-portals/: Makefile.inc  acc.c  acc.h  armci.c  armci.h  armci_portals.c  armcip.h  caccumulate.c  capi.c  ccopy.c  clusterinfo.c  copy.h  faccumulate.f  fence.c  gpc.c  gpc.h  kr_malloc.c  memlock.c  memlock.h  memory.c  message.c  message.h  new_memory.c  parmci.h  pendbufs.c  portals.c  request.c  rmw.c  shmalloc.c  shmem.c  strided.c  vector.c
armci/tcgmsg/: Makefile.inc  capi.c  tcgmsg.h
armci/testing/: acc_test.c  copy_test.c  fttest.c  gpctest.c  ipctest.c  msgcheck.c  perf.c  perf2.c  perf_aggr.c  perf_nb.c  perf_strided.c  shmclean.c  shmtest.c  simple.c  simplelock.c  test.c  test2.c  test_groups.c  test_mt.c  testitr.c  testnotify.c  timer.h
armci/testing-portals/: gpctest.c  ipctest.c  msgcheck.c  perf.c  perf_aggr.c  perf_nb.c  simple.c  simplelock.c  test.c  test2.c  test_groups.c  test_mt.c  testnotify.c
armci/tools/: armci-config.in  armci-config.in.m4sh  armci_prof.c  armci_profile.c  capi_gen.py
cmx/: CMakeLists.txt
cmx/src-armci/: armci.c  armci.h  groups.c  groups.h  message.c  reg_entry.c
cmx/src-common/: acc.h  acc.hpp  alloc.cpp  alloc.hpp  cmx.h  cmx.hpp  cmx_alloc.cpp  cmx_environment.cpp  cmx_environment.hpp  cmx_group.cpp  cmx_group.hpp  defines.hpp  environment.cpp  environment.hpp  group.cpp  group.hpp
cmx/src-mpi-pr/: Makefile.inc  NOTES.md  cmx.c  cmx.c.dbg  cmx.c.save  cmx_impl.h  cmx_impl.hpp  groups.c  groups.h  node_config.cpp  node_config.hpp  p_alloc.cpp  p_alloc.hpp  p_alloc.hpp.save  p_environment.cpp  p_environment.hpp  p_group.cpp  p_group.hpp  p_structs.hpp  reg_cache.c  reg_cache.cpp  reg_cache.hpp  shmem.cpp  shmem.hpp  tmp
cmx/src-mpi-rma/: cmx.c  cmx_impl.h  groups.c  groups.h
cmx/testing/: perf.c  perf_contig.c  test.c  unit_alloc.cpp  unit_cmx.cpp  unit_contig_acc.cpp  unit_contig_get.cpp  unit_contig_put.cpp  unit_env.cpp  unit_fence_all.cpp  unit_group.cpp  unit_rmw.cpp  unit_strided_acc.cpp  unit_strided_get.cpp  unit_strided_put.cpp  unit_vector_acc.cpp  unit_vector_get.cpp  unit_vector_put.cpp
comex/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
comex/cmake/: comex-utils.cmake  config.h.in
comex/m4/: comex_ar.m4  comex_arg_parse.m4  comex_blas.m4  comex_enable_sysv.m4  comex_enable_xpmem.m4  comex_mpi_unwrap.m4  comex_mpicc.m4  comex_network_setup.m4
comex/src-armci/: Makefile.inc  armci.c  armci.h  capi.c  iterator.c  message.c  parmci.h
comex/src-common/: acc.h  comex.h  comex_defs.h
comex/src-dmapp/: clusterinfo.c  comex.c  groups.h  reg_cache.c  reg_cache.h
comex/src-mpi-mt/: Makefile.inc  NOTES.md  comex.c  comex_impl.h  groups.c  groups.h
comex/src-mpi-pr/: Makefile.inc  NOTES  NOTES.md  comex.c  comex_impl.h  (+15 more)
ga++/: CMakeLists.txt  GNUmakefile  MakeFile  README
gaf2c/: CMakeLists.txt  drand.c  gaf2c.c  typesf2c.h.in
ma/: CMakeLists.txt  GNUmakefile  MA.tex  MakeFile  Makefile  error.c  error.h  f2c.c  f2c.h  ma.c  ma.h  ma.orig.c  macdecls.h  macommon.h  maf.F  maf.cpp  maf2c.fh  maf2c.h  mafdecls.fh  mafdecls.fh.in  mafdecls.h  matypes.h  memcpy.h  scope.h  string-util.c  string-util.h  table.c  table.h  test-coalesce.c  test-inquire.c  testc.c  testf.F  testf.cpp  typesf2c.h  winf2c.h  winutil.h
pario/: CMakeLists.txt  GNUmakefile  MakeFile  Makefile  makefile  makefile.h  pabody
tools/: CMakeLists.txt  armci_trace.c  config_fh_from_h.cmake  config_fh_from_h.pl  f2c_cmake_fh_from_h.cmake  ga-config.c.in  ga-config.in  ga-config.in.m4  ga-config.in.m4sh  ga-wapi.c  ga-wprof.c  ga-wprof.h  ga_papi_to_wapi.cmake  ga_papi_to_wapi.pl  ga_papi_to_wapidefs.cmake  ga_papi_to_wapidefs.pl  gpwapi.c  wapi.c  wapigen.py  wapigen_counts.py  wapigen_timers.py  wapigen_trace.py
(+1482 files in other folders)
